[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ReconNinja"
dynamic = ["version"]
description = "Autonomous multi-phase security reconnaissance framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "ExploitCraft", email = "emonkk06@gmail.com" }
]
keywords = [
  "recon", "reconnaissance", "security", "penetration-testing",
  "osint", "agent", "ai", "mcp", "active-directory"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]

dependencies = [
  # Core
  "rich>=13.0.0",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
  "dnspython>=2.4.0",
  "beautifulsoup4>=4.12.0",
  "cryptography>=41.0.0",
  "pyyaml>=6.0.1",
  "python-whois>=0.9.4",
  "ipwhois>=1.3.0",
  # v9 — MCP server
  "flask>=3.0.0",
  # v9 — AD recon
  "ldap3>=2.9.1",
  # v9 — structured logging / observability (optional deps handled gracefully)
  # neo4j, impacket, shodan, prometheus_client installed separately
]

[project.optional-dependencies]
ai = [
  "groq>=0.5.0",
  "openai>=1.0.0",
  "google-generativeai>=0.5.0",
]
shodan   = ["shodan>=1.28.0"]
ad       = ["impacket>=0.11.0", "ldap3>=2.9.1", "bloodhound>=1.6.1"]
neo4j    = ["neo4j>=5.0.0"]
metrics  = ["prometheus_client>=0.20.0"]
tracing  = ["opentelemetry-sdk>=1.24.0", "opentelemetry-exporter-otlp>=1.24.0"]
tui      = ["textual>=0.55.0"]
full = [
  "groq>=0.5.0",
  "openai>=1.0.0",
  "google-generativeai>=0.5.0",
  "shodan>=1.28.0",
  "impacket>=0.11.0",
  "ldap3>=2.9.1",
  "pysnmp>=6.1.0",
  "neo4j>=5.0.0",
  "prometheus_client>=0.20.0",
  "textual>=0.55.0",
]
# v8 compat extras
v7 = [
  "ipwhois>=1.2.0",
  "ldap3>=2.9.1",
  "pysnmp>=6.1.0",
]

[project.urls]
Homepage   = "https://github.com/ExploitCraft/ReconNinja"
Repository = "https://github.com/ExploitCraft/ReconNinja"
Issues     = "https://github.com/ExploitCraft/ReconNinja/issues"

[project.scripts]
reconninja = "reconninja:main"

[tool.setuptools]
py-modules = ["reconninja"]

[tool.setuptools.packages.find]
where   = ["."]
include = ["core*", "utils*", "output*", "plugins*", "info*"]

[tool.setuptools.package-data]
"*"    = ["*.md", "*.txt"]
"info" = ["version"]

[tool.setuptools.dynamic]
version = {file = "info/version"}
