[build-system]
requires = ["setuptools>=65.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "reconninja"
dynamic = ["version"]
description = "Autonomous multi-phase security reconnaissance framework"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ExploitCraft", email = "emonkk06@gmail.com"}
]
keywords = ["recon", "osint", "reconnaissance", "security", "penetration-testing", "hacking"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking",
]
requires-python = ">=3.10"

# v10: only the absolutely-required runtime deps. Flask was hard-required in
# v9 but is only needed for --gui and --mcp-server, so it's now in [gui].
dependencies = [
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "dnspython>=2.4.0",
    "beautifulsoup4>=4.12.0",
    "cryptography>=41.0.0",
    "pyyaml>=6.0.1",
    "python-whois>=0.9.4",
    "ipwhois>=1.3.0",
    "ldap3>=2.9.1",
]

[project.optional-dependencies]
ai = [
    "groq>=0.9.0",
    "openai>=1.30.0",
    "google-generativeai>=0.7",
]
pdf = [
    "weasyprint>=62.0",
    "fpdf2>=2.7.9",
]
advanced = [
    "shodan>=1.31.0",
    "pymongo>=4.6.0",
    "pysnmp>=6.0.0",
]
ad = [
    "impacket>=0.11.0",
    "bloodhound-python>=1.6.1",
]
neo4j = [
    "neo4j>=5.14.0",
]
metrics = [
    "prometheus-client>=0.20.0",
]
tracing = [
    "opentelemetry-api>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
]
tui = [
    "textual>=0.50.0",
]
gui = [
    "flask>=3.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "responses>=0.25.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
# Convenience aggregate so users can `pip install reconninja[all]`
all = [
    "reconninja[ai,pdf,advanced,ad,neo4j,metrics,tracing,tui,gui]",
]

[project.urls]
Homepage = "https://github.com/ExploitCraft/ReconNinja"
Repository = "https://github.com/ExploitCraft/ReconNinja"
Documentation = "https://doc.emonpersonal.xyz/"
"Bug Tracker" = "https://github.com/ExploitCraft/ReconNinja/issues"
Changelog = "https://github.com/ExploitCraft/ReconNinja/blob/main/CHANGELOG.md"

[project.scripts]
reconninja = "reconninja:main"

[tool.setuptools]
# v10 fix: reconninja.py is a top-level module (not in any package), so it
# must be listed in py_modules — otherwise the wheel ships without it and the
# `reconninja` console script is a broken stub.
py-modules = ["reconninja"]
packages = ["core", "utils", "output", "plugins", "gui", "info"]

[tool.setuptools.package-data]
info = ["version"]

[tool.setuptools.dynamic]
version = {attr = "info.__version__"}

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.ruff]
line-length = 120
target-version = "py310"
